[project]
name = "code-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "AniketSingh032",email = "aniketworkofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.6.6,<0.7.0)",
    "langgraph-cli[inmem] (>=0.4.0,<0.5.0)",
    "langchain-groq (>=0.3.7,<0.4.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
